# claudespace

./: .claude-workspace.yaml  .gitignore  CLAUDE.md  LICENSE  README.md  example.claudespace.yaml  justfile  pyproject.toml
.github/workflows/: ci.yml
claudespace/: cli.py  config.py  docker_utils.py  exceptions.py  settings.py  workspace.py
tests/: __init__.py  test_settings.py
